# mail-nuke

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package.json  pyproject.toml  score.py
config/: replacements.json
plugin/: README.md  background.js  manifest.json
plugin/options/: options.css  options.html  options.js
scripts/: package-plugin.ts  prepare-eml.ts
trainer/: imap_worker.py  model_utils.py  score.py  server.py  train.py
